--- a/app.json
+++ b/app.json
@@ -20,10 +20,17 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "package": "com.jesusfc.fonttrackapp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "631f17a5-bfbd-42bf-a8c6-b45f2252e324"
+      }
+    },
+    "owner": "jesusfc"
   }
 }
